Implement Google Sheets authentication and secure key handling
- Add service account JSON keys to .gitignore for security
- Implement proper Google Sheets authentication using yup-oauth2
- Support both environment variable and local file authentication
- Add automatic detection of service account key file
- Update Cargo.toml with yup-oauth2 dependency and tokio fs features
- Update README with comprehensive authentication setup instructions
- Remove placeholder TODO code with working implementation

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ state.json.backup
 # Config files with secrets (keep example)
 config/config.toml
 
+# Google Cloud service account keys
+*.json
+!config/*.json
+
 # Temporary files
 *.tmp
 *.temp 
