--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ path = "src/main.rs"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
 google-sheets4 = "5.0"
 gcp_auth = "0.6"
+yup-oauth2 = "9.0"
 csv = "1.3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
