Security: Remove debug files containing sensitive tokens and update .gitignore
- Remove debug_*.txt files that contained OAuth tokens
- Update .gitignore to prevent future commits of debug files
- Add patterns to ignore CSV data files and other sensitive output
- Tokens have been revoked and regenerated

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,13 @@ config/config.toml
 
 # Temporary files
 *.tmp
-*.temp 
+*.temp
+
+# Debug output files (may contain sensitive tokens)
+debug_*.txt
+debug_*.log
+output_*.txt
+
+# CSV data files (may contain personal workout data)
+normalized/
+*.csv 
